--- a/src/views/users/profiles.ejs
+++ b/src/views/users/profiles.ejs
@@ -66,7 +66,7 @@
                     <a href="/anime" class="text-2xl font-bold">NakamaStream</a>
                 </div>
                 <div class="flex items-center">
-                    <img src="<%= profileImageUrl %>" alt="Profile" class="h-8 w-8 rounded-full mr-2">
+                <img src="" alt="Profile" class="h-8 w-8 rounded-full mr-2">
                     <a href="/search" class="mr-4 hover:text-indigo-200">
                         <svg class="w-6 h-6 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
                     </a>
@@ -81,9 +81,9 @@
 
     <div class="container mx-auto px-4 py-8">
         <div class="bg-white shadow-xl rounded-3xl overflow-hidden anime-card">
-            <div class="bg-cover bg-center h-64 relative" style="background-image: url('<%= bannerImageUrl %>');">
+            <div class="bg-cover bg-center h-64 relative" style="background-image: url('');">
                 <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 translate-y-1/2">
-                    <img class="rounded-full border-4 border-white w-32 h-32 profile-image float-animation" src="<%= profileImageUrl %>" alt="Profile picture">
+                    <img class="rounded-full border-4 border-white w-32 h-32 profile-image float-animation" src="" alt="Profile picture">
                 </div>
             </div>
             <div class="px-4 py-16 text-center">
