--- a/src/public/css/anime-list.css
+++ b/src/public/css/anime-list.css
@@ -203,3 +203,8 @@ body {
 #explore-menu, #profile-menu {
     pointer-events: auto; /* Allow pointer events */
 }
+
+.no-drag {
+    user-drag: none; /* For WebKit browsers */
+    -webkit-user-drag: none; /* For WebKit browsers */
+}
