--- a/src/views/anime/anime-list.ejs
+++ b/src/views/anime/anime-list.ejs
@@ -129,25 +129,24 @@
             </div>
         </div>
     </nav>
-    
-    
+        
     <!-- Banner Carousel Section -->
     <div id="carousel-container" class="carousel-container container mx-auto px-4 py-4">
-        <div class="carousel-wrapper relative">
-            <div class="carousel-items">
-                <div class="carousel-item">
+        <div id="carousel-wrapper" class="carousel-wrapper relative overflow-hidden">
+            <div id="carousel-items" class="carousel-items flex transition-transform duration-300 ease-in-out">
+                <div class="carousel-item flex-shrink-0 w-full">
                     <a href="#" class="block">
-                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/90ef8252-69af-4bad-b6b3-2449f1c5def5.png" alt="Banner 1" class="w-full h-auto object-cover rounded-lg shadow-md">
+                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/90ef8252-69af-4bad-b6b3-2449f1c5def5.png" alt="Banner 1" class="w-full h-auto object-cover rounded-lg shadow-md no-drag">
                     </a>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item flex-shrink-0 w-full">
                     <a href="#" class="block">
-                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/5d86d444-22f9-45ab-beb8-3e99378bf564.png" alt="Banner 2" class="w-full h-auto object-cover rounded-lg shadow-md">
+                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/5d86d444-22f9-45ab-beb8-3e99378bf564.png" alt="Banner 2" class="w-full h-auto object-cover rounded-lg shadow-md no-drag">
                     </a>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item flex-shrink-0 w-full">
                     <a href="#" class="block">
-                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/033a3973-269b-48bf-a518-1fc046baeb59.png" alt="Banner 3" class="w-full h-auto object-cover rounded-lg shadow-md">
+                        <img src="https://imgsrv.crunchyroll.com/cdn-cgi/image/fit=contain,format=auto,quality=85,width=1350/cr/desktop_large/033a3973-269b-48bf-a518-1fc046baeb59.png" alt="Banner 3" class="w-full h-auto object-cover rounded-lg shadow-md no-drag">
                     </a>
                 </div>
                 <!-- Add more banners as needed -->
