--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -11,9 +11,16 @@
 <body>
   <div class="login-form">
     <h1 class="login-form-title">Inicio de sesión</h1>
+    
+    <!-- Alerta informativa -->
+    <div class="error-message">
+       NakamaStream requiere que tengas una cuenta para ver anime.
+    </div>
+
     <% if (typeof errorMessage !== 'undefined') { %>
       <div class="error-message"><%= errorMessage %></div>
     <% } %>
+
     <form action="/login" method="post">
       <div class="field">
         <div class="control has-icons-left">
