index.ejs - upadate

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,7 +47,7 @@
                         <br>
                         <p class="subtitle is-size-4-desktop is-size-5-mobile" style="color: #4a4a4a;">
                             ¡Bienvenido a nuestra plataforma de anime, donde disfrutarás de contenido 100% gratuito y sin anuncios! Queremos brindarte la mejor experiencia, por eso también estamos disponibles en dispositivos móviles. <br><br>
-                            <strong>Para ver los animes, necesitarás una cuenta en NakamaStream.</strong> Esto nos permite personalizar tu experiencia, ofrecerte recomendaciones basadas en tus gustos y asegurar una experiencia libre de interrupciones. ¡Explora y disfruta de tus animes favoritas!
+                            <strong>Para ver los animes, necesitarás una cuenta en NakamaStream.</strong> Esto nos permite personalizar tu experiencia, ofrecerte recomendaciones basadas en tus gustos y asegurar una experiencia libre de interrupciones. ¡Explora y disfruta de tus animes favoritos!
                         </p>
                         <br>
                         <p class="control" style="display: flex; align-items: center;">
